--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <li><a href="#">Show Menu</a></li>
       <li><a href="#">Show Modal</a>
         <div class="modal-panel">
-          <div class="modal-content-pane">
+          <div class="modal-content-panel">
             <div class="modal-content"></div>
           </div>
         </div>
