--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <header>
     <ul id="js-triggers">
       <li><a id="show-menu" href="#">Show Menu</a></li>
-      <li><a id="show-modal" href="#">Show Modal</a>
+      <li><a id="start-modal" href="#">Show Modal</a>
         <div class="modal-panel">
           <div class="modal-content-panel">
             <div class="modal-content"></div>
