--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles/main.css">
   </head>
 <body>
-  <nav>
+  <nav class="menu-box">
     <ul>
       <li><a href="#">Menu 1</a>
         <ul>
