Toggle menu with animation

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   </nav>
   <header>
     <ul id="js-triggers">
-      <li><a id="show-menu" href="#">Show Menu</a></li>
-      <li><a id="start-modal" href="#">Show Modal</a>
+      <li><a id="open-menu" href="#">Show Menu</a></li>
+      <li><a id="open-modal" href="#">Show Modal</a>
         <div class="modal-panel">
           <div class="modal-content-panel">
             <div class="modal-content"></div>
