--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <li><a id="open-modal" href="#">Show Modal</a>
         <div class="modal-panel">
           <div class="modal-content-panel">
+            <p>Hi, I am a modal!</p>
             <div class="modal-content"></div>
           </div>
         </div>
